--- a/addons/pao_digital_services_catalog/views/views.xml
+++ b/addons/pao_digital_services_catalog/views/views.xml
@@ -10,24 +10,53 @@
 
         <template id="service_data" name="Service Page">
             <t t-call="website.layout">
-                <div class = 'oe_structure'>
-                    <div class= 'container'>
-                        <center><h3>Service Details</h3></center>
-                        <iframe allowfullscreen="" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 400px;" src="https://heyzine.com/flip-book/1b6fa93378.html"></iframe>
+                <div class = 'oe_structure' style="width: 100%;">
+                    <div class= 'container' style="width: 100%;">
+                        <style>
+.container {
+    /* To position the loading */
+    position: absolute;
+}
+
+#loading{
+	position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+}
+
+                        </style>
+
+                        <img id="loading" src= "pao_digital_services_catalog/static/src/images/load.gif"/>
+                        <iframe id="iframe" allowfullscreen="" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 800px; opacity: 0; " src="https://heyzine.com/flip-book/c5bb530d2a.html"></iframe>
+
+                        <script>
+const iframeEle = document.getElementById('iframe');
+const loadingEle = document.getElementById('loading');
+
+iframeEle.addEventListener('load', function () {
+    // Hide the loading indicator
+    loadingEle.style.display = 'none';
+
+    // Bring the iframe back
+    iframeEle.style.opacity = 1;
+});
+                        </script>
                     </div>
-                </div> 
-    
+                </div>
+
             </t>
-            
+
         </template>
 
         <record id="services_page" model="website.page">
-            <field name="name">Services page</field>
+            <field name="name">Services</field>
             <field name="website_published">True</field>
             <field name="url">/services</field>
             <field name="view_id" ref="service_data"/>
         </record>
-
 
     </data>
 </odoo>
